# blazer

./: .gitignore  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: config.rs  errors.rs  main.rs  state.rs
backend/src/entity/: user.rs
backend/src/routes/: account.rs  mod.rs
backend/src/services/: mutation.rs  query.rs
backend/src/types/: message.rs
backend/src/utils/: jwt.rs
frontend/: Dockerfile  bun.lockb  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/c/[id]/: page.tsx
frontend/app/chat/[id]/: page.tsx
frontend/app/chats/: page.tsx
frontend/app/lib/: api.ts
frontend/app/login/: page.tsx
