[package]
name = "blazer-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }
config = "0.15.7"
dotenvy = "0.15.7"
listenfd = "1.0.2"
migration = { path = "migration" }
log = "0.4.25"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.13.1", features = ["v7"] }
chrono = { version = "0.4.39", features = ["serde"] }
bcrypt = "0.17.0"
